--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
     "jest": "^27.0.5",
-    "node-sass": "5.0.0",
+    "node-sass": "^5.0.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "sass-loader": "10.1.1",
+    "sass-loader": "^10.1.1",
     "vue-jest": "^3.0.4"
   },
   "resolutions": {
